fix a few song titles

--- a/initial_exploration/Data Characterization - chords.ipynb
+++ b/initial_exploration/Data Characterization - chords.ipynb
@@ -34,7 +34,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-18T01:18:30.984370Z",
+     "start_time": "2019-09-18T01:18:29.714474Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -58,7 +63,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-18T01:18:32.364552Z",
+     "start_time": "2019-09-18T01:18:32.355695Z"
+    }
+   },
    "outputs": [],
    "source": [
     "num_songs = 1108\n",
@@ -72,6 +82,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-18T01:18:32.776368Z",
+     "start_time": "2019-09-18T01:18:32.769139Z"
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -94,7 +108,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-18T01:18:34.031653Z",
+     "start_time": "2019-09-18T01:18:33.641050Z"
+    }
+   },
    "outputs": [],
    "source": [
     "curr_row = 0\n",
@@ -106,7 +125,12 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-18T01:18:34.802807Z",
+     "start_time": "2019-09-18T01:18:34.786996Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -203,7 +227,12 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-18T01:18:36.887617Z",
+     "start_time": "2019-09-18T01:18:36.875969Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#next do mcgill billboard project\n",
@@ -213,7 +242,12 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-18T01:18:37.908376Z",
+     "start_time": "2019-09-18T01:18:37.895407Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -334,7 +368,12 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-18T01:18:41.645805Z",
+     "start_time": "2019-09-18T01:18:40.188404Z"
+    }
+   },
    "outputs": [],
    "source": [
     "curr_dir = 'Data/McGill-Billboard/'\n",
@@ -352,6 +391,10 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-18T01:18:41.657437Z",
+     "start_time": "2019-09-18T01:18:41.647643Z"
+    },
     "scrolled": true
    },
    "outputs": [
@@ -448,9 +491,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's get rid of those annoying integers at the beginning of the titles of the white album\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-18T01:18:46.616089Z",
+     "start_time": "2019-09-18T01:18:46.604338Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/envs/insight/lib/python3.7/site-packages/pandas/core/indexing.py:205: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._setitem_with_indexer(indexer, value)\n"
+     ]
+    }
+   ],
+   "source": [
+    "song_directory['track'].iloc[113:126] = song_directory['track'].iloc[113:126].apply(lambda x: x[5:])\n",
+    "song_directory['track'].iloc[71:88] = song_directory['track'].iloc[71:88].apply(lambda x: x[5:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-18T01:19:31.300864Z",
+     "start_time": "2019-09-18T01:19:31.287369Z"
+    }
+   },
    "outputs": [],
    "source": [
     "song_directory.to_csv('../song_directory.csv',index=False)"
