--- a/initial_exploration/Data Characterization - chords.ipynb
+++ b/initial_exploration/Data Characterization - chords.ipynb
@@ -36,8 +36,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-18T01:18:30.984370Z",
-     "start_time": "2019-09-18T01:18:29.714474Z"
+     "end_time": "2019-09-18T16:50:00.439375Z",
+     "start_time": "2019-09-18T16:49:59.387830Z"
     }
    },
    "outputs": [],
@@ -65,8 +65,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-18T01:18:32.364552Z",
-     "start_time": "2019-09-18T01:18:32.355695Z"
+     "end_time": "2019-09-18T16:50:03.221102Z",
+     "start_time": "2019-09-18T16:50:03.208785Z"
     }
    },
    "outputs": [],
@@ -83,8 +83,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-18T01:18:32.776368Z",
-     "start_time": "2019-09-18T01:18:32.769139Z"
+     "end_time": "2019-09-18T16:50:03.617111Z",
+     "start_time": "2019-09-18T16:50:03.609452Z"
     },
     "scrolled": true
    },
@@ -110,8 +110,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-18T01:18:34.031653Z",
-     "start_time": "2019-09-18T01:18:33.641050Z"
+     "end_time": "2019-09-18T16:50:05.251877Z",
+     "start_time": "2019-09-18T16:50:04.850540Z"
     }
    },
    "outputs": [],
@@ -127,8 +127,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-18T01:18:34.802807Z",
-     "start_time": "2019-09-18T01:18:34.786996Z"
+     "end_time": "2019-09-18T16:50:05.701163Z",
+     "start_time": "2019-09-18T16:50:05.686686Z"
     }
    },
    "outputs": [
@@ -229,8 +229,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-18T01:18:36.887617Z",
-     "start_time": "2019-09-18T01:18:36.875969Z"
+     "end_time": "2019-09-18T16:50:08.665971Z",
+     "start_time": "2019-09-18T16:50:08.653677Z"
     }
    },
    "outputs": [],
@@ -244,8 +244,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-18T01:18:37.908376Z",
-     "start_time": "2019-09-18T01:18:37.895407Z"
+     "end_time": "2019-09-18T16:50:10.131430Z",
+     "start_time": "2019-09-18T16:50:10.118070Z"
     }
    },
    "outputs": [
@@ -370,8 +370,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-18T01:18:41.645805Z",
-     "start_time": "2019-09-18T01:18:40.188404Z"
+     "end_time": "2019-09-18T16:50:16.793505Z",
+     "start_time": "2019-09-18T16:50:15.266390Z"
     }
    },
    "outputs": [],
@@ -392,8 +392,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-18T01:18:41.657437Z",
-     "start_time": "2019-09-18T01:18:41.647643Z"
+     "end_time": "2019-09-18T16:50:16.809039Z",
+     "start_time": "2019-09-18T16:50:16.798544Z"
     },
     "scrolled": true
    },
@@ -502,8 +502,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-18T01:18:46.616089Z",
-     "start_time": "2019-09-18T01:18:46.604338Z"
+     "end_time": "2019-09-18T16:50:19.920446Z",
+     "start_time": "2019-09-18T16:50:19.908826Z"
     }
    },
    "outputs": [
@@ -526,11 +526,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-18T01:19:31.300864Z",
-     "start_time": "2019-09-18T01:19:31.287369Z"
+     "end_time": "2019-09-18T16:50:21.954670Z",
+     "start_time": "2019-09-18T16:50:21.940609Z"
     }
    },
    "outputs": [],
@@ -1697,6 +1697,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
