code for generating features and labels

--- a/initial_exploration/Data Characterization - chords.ipynb
+++ b/initial_exploration/Data Characterization - chords.ipynb
@@ -1148,7 +1148,9 @@
    "source": [
     "Okay, now I'm satisfied with this procedure, and will transfer it over to a .py file.\n",
     "\n",
-    "`chord_loader.py`"
+    "`chord_loader.py`\n",
+    "\n",
+    "ETA: I later renamed and reworked this model, so this code will no longer work"
    ]
   },
   {
