--- a/initial_exploration/First model.ipynb
+++ b/initial_exploration/First model.ipynb
@@ -35,7 +35,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-18T22:33:39.948647Z",
+     "start_time": "2019-09-18T22:33:37.308037Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from IPython.display import Audio, display\n",
@@ -71,6 +76,13 @@
     "## Loading music file\n",
     "[Return to top](#Table-of-contents)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -168,8 +180,8 @@
     "cqt_options = {'sr':sr,\n",
     "               'hop_length':int(sr/64)*64, #approx 1 s\n",
     "               'fmin':32.7, #minimum frequency, in Hz\n",
-    "               'n_bins':252, #7 octaves\n",
-    "               'bins_per_octave':36,\n",
+    "               'n_bins':120, #10 octaves\n",
+    "               'bins_per_octave':12,\n",
     "               'tuning':0.0}\n",
     "spec_train = librosa.cqt(track_train, **cqt_options)\n",
     "spec_test = librosa.cqt(track_test, **cqt_options)\n",
@@ -821,6 +833,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": true,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
