resolve some bugs

--- a/Logistic Regression model.ipynb
+++ b/Logistic Regression model.ipynb
@@ -76,11 +76,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 268,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-18T22:34:19.611986Z",
-     "start_time": "2019-09-18T22:34:19.607151Z"
+     "end_time": "2019-09-18T22:58:47.648130Z",
+     "start_time": "2019-09-18T22:58:47.643563Z"
     }
    },
    "outputs": [],
@@ -95,11 +95,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 269,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-18T22:34:19.771061Z",
-     "start_time": "2019-09-18T22:34:19.761724Z"
+     "end_time": "2019-09-18T22:58:53.252764Z",
+     "start_time": "2019-09-18T22:58:53.246150Z"
     }
    },
    "outputs": [],
@@ -133,36 +133,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 272,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-18T22:34:34.535011Z",
-     "start_time": "2019-09-18T22:34:21.931697Z"
+     "end_time": "2019-09-18T23:00:48.672989Z",
+     "start_time": "2019-09-18T23:00:36.249767Z"
     }
    },
    "outputs": [],
    "source": [
     "features, labels, transposition = chord_loader.get_features_labels(\n",
-    "    song_directory.iloc[0:2,:],1,32.7,7,1,True)"
+    "    song_directory.iloc[0:2,:],0.5,32.7,7,1,True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 273,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-18T22:34:36.832010Z",
-     "start_time": "2019-09-18T22:34:36.824750Z"
+     "end_time": "2019-09-18T23:00:48.679468Z",
+     "start_time": "2019-09-18T23:00:48.674966Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3552, 97)"
+       "(7080, 96)"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,9 @@
    "source": [
     "If it takes 6.3 s per song, then this whole thing will take about an hour and a half, and that's before even training the model.\n",
     "\n",
-    "The number of rows will be about 1.5 million, and it will take up about 1 GB."
+    "The featurs table will be about (3 million,100), and it will take up about 2 GB.\n",
+    "\n",
+    "Using higher `bins_per_note` or shorter `block_length` expands the data size, but appears not to increase the processing time.  Probably most of that processing time is in librosa's load function."
    ]
   },
   {
@@ -185,6 +187,98 @@
    "metadata": {},
    "source": [
     "## Scratch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-18T22:53:24.089494Z",
+     "start_time": "2019-09-18T22:53:24.084827Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5010034403669724\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(chord_loader.get_true_block(0.5,32.7,7,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-18T22:54:02.296499Z",
+     "start_time": "2019-09-18T22:54:02.290651Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8388\n"
+     ]
+    }
+   ],
+   "source": [
+    "maxfreq = 32.7*(2**7)\n",
+    "sr = 4*maxfreq\n",
+    "hop_restriction = (7-1)**2\n",
+    "hop_length = round(.5*sr/hop_restriction)*hop_restriction\n",
+    "print(hop_length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-18T22:54:10.262882Z",
+     "start_time": "2019-09-18T22:54:10.258590Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hop_restriction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-18T22:54:21.983663Z",
+     "start_time": "2019-09-18T22:54:21.978789Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((7-1)**2)"
    ]
   },
   {
