add bash command to process data

--- a/Logistic Regression model.ipynb
+++ b/Logistic Regression model.ipynb
@@ -16,7 +16,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Outline-of-model\" data-toc-modified-id=\"Outline-of-model-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Outline of model</a></span></li><li><span><a href=\"#Setup\" data-toc-modified-id=\"Setup-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Setup</a></span></li><li><span><a href=\"#Features-&amp;-Labels-testing\" data-toc-modified-id=\"Features-&amp;-Labels-testing-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Features &amp; Labels testing</a></span></li><li><span><a href=\"#Training/validation/test-split\" data-toc-modified-id=\"Training/validation/test-split-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Training/validation/test split</a></span></li><li><span><a href=\"#Train-root-model-on-playground_set\" data-toc-modified-id=\"Train-root-model-on-playground_set-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Train root model on playground_set</a></span></li><li><span><a href=\"#Train-other-models-on-test-set\" data-toc-modified-id=\"Train-other-models-on-test-set-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Train other models on test set</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Outline-of-model\" data-toc-modified-id=\"Outline-of-model-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Outline of model</a></span></li><li><span><a href=\"#Setup\" data-toc-modified-id=\"Setup-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Setup</a></span></li><li><span><a href=\"#Features-&amp;-Labels-testing\" data-toc-modified-id=\"Features-&amp;-Labels-testing-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Features &amp; Labels testing</a></span></li><li><span><a href=\"#Training/validation/test-split\" data-toc-modified-id=\"Training/validation/test-split-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Training/validation/test split</a></span></li><li><span><a href=\"#Train-root-model-on-playground_set\" data-toc-modified-id=\"Train-root-model-on-playground_set-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Train root model on playground_set</a></span></li><li><span><a href=\"#Train-other-models-on-test-set\" data-toc-modified-id=\"Train-other-models-on-test-set-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Train other models on test set</a></span></li><li><span><a href=\"#Setting-up-bash-commands\" data-toc-modified-id=\"Setting-up-bash-commands-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Setting up bash commands</a></span></li></ul></div>"
    ]
   },
   {
@@ -76,11 +76,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-19T04:17:17.691458Z",
-     "start_time": "2019-09-19T04:17:17.686310Z"
+     "end_time": "2019-09-19T20:54:44.600238Z",
+     "start_time": "2019-09-19T20:54:44.595292Z"
     }
    },
    "outputs": [],
@@ -90,18 +90,18 @@
     "import librosa\n",
     "import librosa.display\n",
     "import matplotlib.pyplot as plt\n",
-    "import sys\n",
+    "import sys, os\n",
     "from sklearn.model_selection import train_test_split\n",
     "import sklearn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-19T05:45:37.385430Z",
-     "start_time": "2019-09-19T05:45:37.375895Z"
+     "end_time": "2019-09-19T20:22:22.775177Z",
+     "start_time": "2019-09-19T20:22:22.770119Z"
     }
    },
    "outputs": [],
@@ -117,8 +117,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-18T18:19:18.585362Z",
-     "start_time": "2019-09-18T18:19:18.565112Z"
+     "end_time": "2019-09-19T20:22:22.845402Z",
+     "start_time": "2019-09-19T20:22:22.777648Z"
     }
    },
    "outputs": [],
@@ -135,11 +135,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-19T04:44:34.856301Z",
-     "start_time": "2019-09-19T04:44:22.658466Z"
+     "end_time": "2019-09-19T20:22:50.327928Z",
+     "start_time": "2019-09-19T20:22:36.874818Z"
     }
    },
    "outputs": [],
@@ -320,7 +320,7 @@
    "outputs": [],
    "source": [
     "features_valid, labels_valid = chord_loader.get_features_labels(\n",
-    "    playvalid_set,0.5,32.7,7,1,True)"
+    "    playvalid_set,0.5,32.7,7,1,False)"
    ]
   },
   {
@@ -636,6 +636,91 @@
    ],
    "source": [
     "plt.pcolor(quality_model.coef_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setting up bash commands\n",
+    "Now that I've explored a bit, I'd like to set up bash commands to process the mp3/chord files, and save the numpy arrays.  The arrays will be saved in `Data/processed/` as npy files.  There will also be a file `Data/processed/directory.csv` with basic info about settings used to process files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-19T20:38:35.328508Z",
+     "start_time": "2019-09-19T20:38:35.324335Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "header = 'filepath, block_length, minfreq, num_octaves, bins_per_note, transpose, standard'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-19T20:38:35.844158Z",
+     "start_time": "2019-09-19T20:38:35.839388Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "with open('Data/processed/directory.csv','a') as f:\n",
+    "    f.write(header)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I will execute the following on an EC2 instance:\n",
+    "```python chord_process.py --transpose --standard```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-19T20:51:56.066795Z",
+     "start_time": "2019-09-19T20:51:55.937609Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!rm Data/processed/directory.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-19T20:54:33.572989Z",
+     "start_time": "2019-09-19T20:54:33.310851Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-ba4cef7037b6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Data/processed/directory.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "os.exists('Data/processed/directory.csv')"
    ]
   },
   {
