add prediction command

--- a/Logistic Regression model.ipynb
+++ b/Logistic Regression model.ipynb
@@ -93,13 +93,9 @@
     "import sys, os\n",
     "from sklearn.model_selection import train_test_split\n",
     "import sklearn\n",
+    "import re\n",
     "\n",
     "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "import re\n",
-    "from subprocess import call, Popen\n",
-    "import time, random\n",
-    "import datetime\n",
     "import youtube_dl\n",
     "import traceback"
    ]
@@ -942,11 +938,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Lastly, I'd like to set up predictions.  The following command should work:\n",
+    "\n",
+    "```python lr_predict https://www.youtube.com/watch?v=a__Y4dlP8eo default_lr 'Sail to the Moon'```"
+   ]
   }
  ],
  "metadata": {
