add metric calculation to lr_train (still bugged)

--- a/Logistic Regression model.ipynb
+++ b/Logistic Regression model.ipynb
@@ -59,14 +59,14 @@
     "1. range of fequencies in spectra\n",
     "1. Any classes worth ignoring (e.g. aug and dim)\n",
     "\n",
-    "During validation, I will score the models as follows:\n",
+    "During validation, I will score the models using weighted F1.  Quality, add, and inversion models will be provided with the true root so as to separate their performance metrics from the root model performance.  I will also calculate the following metrics, for use in presentation:\n",
     "\n",
-    "- root model: F1 of root\n",
-    "- quality model: F1 of character, among data with correct root\n",
-    "- add model: F1 of add, among data with correct root & character\n",
-    "- inversion model: F1 of inversion, among data with correct root & character\n",
-    "\n",
-    "The F1 score I intend to use is the weighted F1."
+    "1. Accuracy of each model\n",
+    "1. Total accuracy of all models\n",
+    "1. Confusion matrices of each model\n",
+    "1. Accuracy grouped by two other parameters:\n",
+    "    - difference between mp3 and video length\n",
+    "    - genre (if possible)"
    ]
   },
   {
@@ -1113,6 +1113,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Okay, I think this needs some work, and would be a lot easier if it were just incorporated into lr_train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-09-20T04:11:51.937281Z",
@@ -1135,11 +1142,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following command will process the data:\n",
+    "The following command will process the 10% of the data:\n",
     "\n",
     "```python chord_process.py default_lr --transpose --standard --frac 0.1```\n",
     "\n",
-    "Which only processes 10% of the data, but I don't have time to do more right now."
+    "And the following will process 100% of the data (takes about 2 hours):\n",
+    "\n",
+    "```python chord_process.py full_lr --transpose --standard```"
    ]
   },
   {
@@ -1388,18 +1397,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-24T00:58:25.583077Z",
+     "start_time": "2019-09-24T00:58:25.576457Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "metrics = pickle.load(open(\"Models/default_10_metrics.pkl\", 'rb'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Scratch"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
