fix metric calculation

--- a/Logistic Regression model.ipynb
+++ b/Logistic Regression model.ipynb
@@ -16,7 +16,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Outline-of-model\" data-toc-modified-id=\"Outline-of-model-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Outline of model</a></span></li><li><span><a href=\"#Setup\" data-toc-modified-id=\"Setup-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Setup</a></span></li><li><span><a href=\"#Testing\" data-toc-modified-id=\"Testing-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Testing</a></span><ul class=\"toc-item\"><li><span><a href=\"#Creating-features/labels\" data-toc-modified-id=\"Creating-features/labels-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Creating features/labels</a></span></li><li><span><a href=\"#Training/validation/test-split\" data-toc-modified-id=\"Training/validation/test-split-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Training/validation/test split</a></span></li><li><span><a href=\"#Train-root-model-on-playground_set\" data-toc-modified-id=\"Train-root-model-on-playground_set-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Train root model on playground_set</a></span></li><li><span><a href=\"#Train-quality-model-on-playground-set\" data-toc-modified-id=\"Train-quality-model-on-playground-set-3.4\"><span class=\"toc-item-num\">3.4&nbsp;&nbsp;</span>Train quality model on playground set</a></span></li><li><span><a href=\"#Producing-labels-given-youtube-video\" data-toc-modified-id=\"Producing-labels-given-youtube-video-3.5\"><span class=\"toc-item-num\">3.5&nbsp;&nbsp;</span>Producing labels given youtube video</a></span></li><li><span><a href=\"#Plotting-learning-curves\" data-toc-modified-id=\"Plotting-learning-curves-3.6\"><span class=\"toc-item-num\">3.6&nbsp;&nbsp;</span>Plotting learning curves</a></span></li></ul></li><li><span><a href=\"#Building-the-model\" data-toc-modified-id=\"Building-the-model-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Building the model</a></span><ul class=\"toc-item\"><li><span><a href=\"#Setting-up-bash-commands\" data-toc-modified-id=\"Setting-up-bash-commands-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Setting up bash commands</a></span></li></ul></li><li><span><a href=\"#Scratch\" data-toc-modified-id=\"Scratch-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Scratch</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Outline-of-model\" data-toc-modified-id=\"Outline-of-model-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Outline of model</a></span></li><li><span><a href=\"#Setup\" data-toc-modified-id=\"Setup-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Setup</a></span></li><li><span><a href=\"#Testing\" data-toc-modified-id=\"Testing-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Testing</a></span><ul class=\"toc-item\"><li><span><a href=\"#Creating-features/labels\" data-toc-modified-id=\"Creating-features/labels-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Creating features/labels</a></span></li><li><span><a href=\"#Training/validation/test-split\" data-toc-modified-id=\"Training/validation/test-split-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Training/validation/test split</a></span></li><li><span><a href=\"#Train-root-model-on-playground_set\" data-toc-modified-id=\"Train-root-model-on-playground_set-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Train root model on playground_set</a></span></li><li><span><a href=\"#Train-quality-model-on-playground-set\" data-toc-modified-id=\"Train-quality-model-on-playground-set-3.4\"><span class=\"toc-item-num\">3.4&nbsp;&nbsp;</span>Train quality model on playground set</a></span></li><li><span><a href=\"#Producing-labels-given-youtube-video\" data-toc-modified-id=\"Producing-labels-given-youtube-video-3.5\"><span class=\"toc-item-num\">3.5&nbsp;&nbsp;</span>Producing labels given youtube video</a></span></li><li><span><a href=\"#Plotting-learning-curves\" data-toc-modified-id=\"Plotting-learning-curves-3.6\"><span class=\"toc-item-num\">3.6&nbsp;&nbsp;</span>Plotting learning curves</a></span></li></ul></li><li><span><a href=\"#Building-the-model\" data-toc-modified-id=\"Building-the-model-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Building the model</a></span><ul class=\"toc-item\"><li><span><a href=\"#Setting-up-bash-commands\" data-toc-modified-id=\"Setting-up-bash-commands-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Setting up bash commands</a></span></li><li><span><a href=\"#Optimization\" data-toc-modified-id=\"Optimization-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Optimization</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -31,10 +31,12 @@
    "metadata": {},
    "source": [
     "For the minimum viable product, I will use the simplest model: logistic regression.  There will be four classification models:\n",
-    "1. root (13 classes: -1 to 11) (-1 indicates no chord.  Some training data will be nan, meaning unidentifiable)\n",
-    "1. character (6 classes: unison, power, maj, min, dim, aug) (always nan if root is -1)\n",
-    "1. add (9 classes: min9, 9, 4, tt, min6, 6, min7, maj7, nan) (always nan if root is -1)\n",
-    "1. inversion (3 classes: 3, 5, nan) (always nan if root is -1)\n",
+    "1. root (13 classes: A, Bb, B, etc. and ~) (~ indicates no chord.  Some labeled data may be nan, meaning unidentifiable)\n",
+    "1. character (6 classes: unison, power, maj, min, dim, aug) (always '' if root is ~)\n",
+    "1. add (9 classes: min9, 9, 4, tt, min6, 6, min7, maj7, '') (always '' if root is ~)\n",
+    "1. inversion (3 classes: /3, /5, '') (always '' if root is ~)\n",
+    "\n",
+    "Note that each of these chord properties is encoded as an integer, e.g. rootnum=-1 corresponds to root='~'\n",
     "\n",
     "mp3 data will undergo the following preparation steps:\n",
     "1. Converted to dB spectra\n",
@@ -54,19 +56,18 @@
     "1. Abridged to be same length as feature data, removing any rows with nan root.\n",
     "1. (Training data only) root label transposed as mp3 data is transposed\n",
     "\n",
-    "These steps imply the following model parameters:\n",
-    "1. Time step length\n",
-    "1. range of fequencies in spectra\n",
-    "1. Any classes worth ignoring (e.g. aug and dim)\n",
+    "I'd like to tune the following model parameters:\n",
+    "1. L2 weight\n",
+    "1. Whether balanced weighting is used (if I get to it, otherwise I default to balanced)\n",
     "\n",
-    "During validation, I will score the models using weighted F1.  Quality, add, and inversion models will be provided with the true root so as to separate their performance metrics from the root model performance.  I will also calculate the following metrics, for use in presentation:\n",
+    "There are of course other parameters that can be tuned, but these are the easiest, and also allow me to tune each model independently without having to re-process the data for each model.  To validate, I will score the models using weighted F1.  Quality, add, and inversion models will be provided with the true root so as to separate their performance metrics from the root model performance.  I will also calculate the following metrics, for use in presentation:\n",
     "\n",
     "1. Accuracy of each model\n",
     "1. Total accuracy of all models\n",
     "1. Confusion matrices of each model\n",
     "1. Accuracy grouped by two other parameters:\n",
     "    - difference between mp3 and video length\n",
-    "    - genre (if possible)"
+    "    - chart date of song (or release date for isophonics data)"
    ]
   },
   {
@@ -1144,7 +1145,7 @@
    "source": [
     "The following command will process the 10% of the data:\n",
     "\n",
-    "```python chord_process.py default_lr --transpose --standard --frac 0.1```\n",
+    "```python chord_process.py partial_lr --transpose --standard --frac 0.1```\n",
     "\n",
     "And the following will process 100% of the data (takes about 2 hours):\n",
     "\n",
@@ -1155,21 +1156,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After data is processed, I'm training linear regression models, and saving to directory `Models` as pickles.  I use the following command:\n",
+    "After data is processed, I'm training linear regression models, and saving to directory `Models` as pickles.  The following is a test command, using 10% of data\n",
     "\n",
-    "```python lr_train.py default_lr default_10 --weighted```"
+    "```python lr_train.py partial_lr partial --weighted```"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "I'd also like to make learning curves, so I'll also execute the following:\n",
-    "\n",
-    "```python lr_train.py default_lr default_08 --weighted --frac 0.8\n",
-    "python lr_train.py default_lr default_06 --weighted --frac 0.6\n",
-    "python lr_train.py default_lr default_04 --weighted --frac 0.4\n",
-    "python lr_train.py default_lr default_02 --weighted --frac 0.2```"
+    "metrics = pickle.load(open(\"Models/partial_metrics.pkl\", 'rb'))"
    ]
   },
   {
@@ -1178,7 +1176,7 @@
    "source": [
     "Lastly, I'd like to set up predictions.  The following command should work:\n",
     "\n",
-    "```python lr_predict.py https://www.youtube.com/watch?v=a__Y4dlP8eo default_10 'Sail to the Moon'```"
+    "```python lr_predict.py https://www.youtube.com/watch?v=a__Y4dlP8eo partial 'Sail to the Moon'```"
    ]
   },
   {
@@ -1188,7 +1186,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-24T00:05:17.149502Z",
      "start_time": "2019-09-24T00:05:17.132263Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1397,17 +1396,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-09-24T00:58:25.583077Z",
-     "start_time": "2019-09-24T00:58:25.576457Z"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "metrics = pickle.load(open(\"Models/default_10_metrics.pkl\", 'rb'))"
+    "### Optimization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To optimize the L2 weight, I generate the following models:\n",
+    "\n",
+    "```python lr_train.py full_lr full_1 --C 1.0 --weighted; python lr_train.py full_lr full_03 --C 0.3 --weighted; python lr_train.py full_lr full_01 --C 0.1 --weighted; python lr_train.py full_lr full_3 --C 3.0 --weighted; python lr_train.py full_lr full_10 --C 10.0 --weighted```"
    ]
   }
  ],
