fix small lr_train bug

--- a/Logistic Regression model.ipynb
+++ b/Logistic Regression model.ipynb
@@ -141,6 +141,8 @@
    "source": [
     "## Testing\n",
     "\n",
+    "A section for me to try out the important functions \"by hand\" before making them into bash commands.  This section should not be run again.  I've likely adjusted each of the functions and it may not work anymore.\n",
+    "\n",
     "### Creating features/labels"
    ]
   },
